# isp-workbook-parser

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cicd.yml
config/5.2/: capacity_factors.yaml  outages.yaml  retirement.yaml
config/6.0/: capacity_factors.yaml
example_output/: additional_projects_summary.csv  affine_heat_rates_new_entrants.csv  aggregated_storage_regional_capacity_progressive_change.csv  aggregated_storage_regional_energy_progressive_change.csv  anticipated_projects_summary.csv  batteries_summary.csv  build_costs_global_nze_post_2050.csv  build_limits_phes.csv  capacity_investment_scheme_storage_trajectory.csv  coal_and_biomass_price_consultant_scenario_mapping.csv  committed_generator_summary.csv  connection_costs_other.csv  connection_costs_outside_rez.csv  discount_rate.csv  dsp_nsw_summer_green_energy_exports.csv  dsp_nsw_summer_step_change.csv  dsp_nsw_winter_green_energy_exports.csv  dsp_nsw_winter_progressive_change.csv  dsp_tas_summer_green_energy_exports.csv  dsp_tas_summer_progressive_change.csv  dsp_tas_summer_step_change.csv  dsp_tas_winter_step_change.csv  dsp_vic_winter_step_change.csv  electricity_demand_for_green_steel_production.csv  electrification_consultant_scenario_mapping.csv  electrification_green_electrification_alternatives.csv  electrification_step_change.csv  emissions_intensity_existing_committed_anticipated_additional_generators.csv  emissions_intensity_new_entrants.csv  energy_efficiency_business_green_energy_exports.csv  ev_uptake_step_change.csv  existing_generator_outages_2023-2024.csv  existing_generator_summary.csv  existing_generators_marginal_loss_factors.csv  existing_generators_summary.csv  expected_closure_years.csv  fcev_green_energy_exports.csv  fixed_opex_new_entrants.csv  flow_patht_transfer_capability.csv  gas_prices_progressive_change.csv  (+44 more)
example_output/6.0/: additional_projects_summary.csv  affine_heat_rates_committed_anticipated_generators.csv  affine_heat_rates_existing_generators.csv  affine_heat_rates_new_entrants.csv  aggregated_storage_regional_capacity_green_energy_exports.csv  aggregated_storage_regional_capacity_step_change.csv  (+303 more)
src/: read_assumption_workbook.py
test/: flow_path_transfer_capability.csv  household_disposable_income_progressive_change.csv  interconnector_transfer_capability.csv  network_committed_and_anticipated_project_timing.csv  notional_transfer_uplift_committed_and_anticipated.csv  reference_temperatures.csv  sydney_ring_generator_coefficients.csv  temperature_dependence_murrylink.csv
tests/: conftest.py  test_config_validation.py  test_packaged_table_configs.py  test_read_table_functionality.py  test_sanitisers.py  test_validation.py  test_workbook_sheets_exist_check.py
(+669 files in other folders)
