[project]
name = "isp-assumptions-parser"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nick-gorman", email = "n.gorman305@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipython>=8.26.0",
    "ipdb>=0.13.13",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/isp_assumptions_parser"]
