[project]
name = "isp-workbook-parser"
version = "1.0"
description = "A Python package for reading data from the Inputs, Assumptions and Scenarios Report (IASR) Microsoft Excel workbook published by the Australian Energy Market Operator for use in their Integrated System Plan modelling."
authors = [
    { name = "nick-gorman", email = "n.gorman305@gmail.com" },
    { name = "prakaa", email = "abiprakash007@gmail.com" },
    { name = "dylanjmcconnell", email = "dylan.mcconnell@unsw.edu.au" }
]
dependencies = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.8.0",
    "ipython>=8.26.0",
    "ipdb>=0.13.13",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
# path to tests for pytest
testpaths = ["src", "tests"]
# addopts = add options
# --cov points pytest-cov to the src/ dir
# --cov-branch runs branch coverage
addopts = "-ra --doctest-modules --cov=src/ --cov-branch --cov-report xml:tests/coverage.xml --cov-report html:tests/htmlcov"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
isp_table_configs = ["**/*.yaml"]
